--- a/index.html
+++ b/index.html
@@ -575,6 +575,25 @@
             display: block;
         }
 
+        footer {
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    padding: 1rem; /* Valor original */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/* Ajustes para dispositivos móviles */
+@media (max-width: 768px) {
+    footer {
+        padding: 0.5rem; /* Reduce el espacio del padding */
+        font-size: 12px; /* Ajusta el tamaño de la fuente */
+    }
+}
+
+
     </style>
 </head>
 <body>
